# SOEM-Systemcore

./: .gitignore  .jenkins  CMakeLists.txt  LICENSE.md  README.md
.docker/: linux-arm64.Dockerfile  windows-x64.Dockerfile
.github/workflows/: build-package.yml
CONTROL/: control  postinst  prerm
daemon/: CMakeLists.txt  README.md  ec-configuration.example.json  ec-systemcore.service
daemon/include/limelight_ec/: mini_json.hpp
daemon/src/: main.cpp
dashboard/: package.json  server.ts
dashboard/public/: app.js  index.html  tailwind.css
docs/daemon/: README.md  ec-configuration.example.json
scripts/: build_ipk.sh
