cmake_minimum_required(VERSION 3.28)

if(NOT DEFINED CMAKE_TOOLCHAIN_FILE
   AND NOT CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "^(aarch64|arm64)$")
  find_program(EC_SYSTEMCORE_AARCH64_C_COMPILER aarch64-linux-gnu-gcc REQUIRED)
  find_program(EC_SYSTEMCORE_AARCH64_CXX_COMPILER aarch64-linux-gnu-g++ REQUIRED)
  set(CMAKE_SYSTEM_NAME Linux CACHE STRING "" FORCE)
  set(CMAKE_SYSTEM_PROCESSOR aarch64 CACHE STRING "" FORCE)
  set(CMAKE_C_COMPILER "${EC_SYSTEMCORE_AARCH64_C_COMPILER}" CACHE FILEPATH "" FORCE)
  set(CMAKE_CXX_COMPILER "${EC_SYSTEMCORE_AARCH64_CXX_COMPILER}" CACHE FILEPATH "" FORCE)
endif()

project(ec-systemcore VERSION 1.0.0 LANGUAGES C CXX)

add_subdirectory(daemon)
